# DAM

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml
DAM_Development_Plan/: index.html
DAM_LLM_System_Prompt/: index.html
DAM_Specification/: index.html
DAM_Specification_zh/: index.html
boundary-callbacks/: index.html
concepts/architecture/: index.html
concepts/boundaries/: index.html
concepts/guards-explained/: index.html
concepts/safety/: index.html
console/: index.html
contributing/: index.html
dam/: __init__.py  decorators.py
dam-console/: Dockerfile  jest.config.js  jest.setup.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
dam-console/src/app/: globals.css  layout.tsx  page.tsx
dam-console/src/components/: ActionShell.tsx  AdapterPicker.tsx  BoundaryList.tsx  (+21 more)
dam-rust/: Cargo.toml
dam-rust/crates/action-bus/: Cargo.toml
dam-rust/crates/action-bus/src/: lib.rs
dam-rust/crates/decision-aggregator/: Cargo.toml
dam-rust/crates/decision-aggregator/src/: lib.rs
dam-rust/crates/image-writer/: Cargo.toml
dam-rust/crates/image-writer/src/: lib.rs
dam-rust/crates/loopback/: Cargo.toml
dam-rust/crates/loopback/src/: lib.rs
dam-rust/crates/mcap-writer/: Cargo.toml
dam-rust/crates/mcap-writer/src/: lib.rs
dam-rust/crates/metric-bus/: Cargo.toml
dam-rust/crates/metric-bus/src/: lib.rs
dam-rust/crates/observation-bus/: Cargo.toml
dam-rust/crates/observation-bus/src/: lib.rs
dam-rust/crates/risk-controller/: Cargo.toml
dam-rust/crates/risk-controller/src/: lib.rs
dam-rust/crates/serializer-bus/: Cargo.toml
dam-rust/crates/serializer-bus/src/: lib.rs
dam-rust/crates/watchdog/: Cargo.toml
dam-rust/crates/watchdog/src/: lib.rs
dam-rust/dam-py/: Cargo.toml  build.rs  pyproject.toml
dam-rust/dam-py/src/: lib.rs
dam/adapter/: __init__.py  base.py
dam/boundary/: __init__.py  builtin_callbacks.py  constraint.py  container.py  graph.py  list_container.py  node.py  single.py
dam/bus/: __init__.py
dam/config/: __init__.py  hot_reload.py  loader.py  schema.py
dam/fallback/: __init__.py  base.py  builtin.py  chain.py  registry.py
dam/guard/: __init__.py  aggregator.py  base.py  layer.py  stage.py
dam/injection/: __init__.py  pool.py  resolver.py  static.py
dam/kinematics/: resolver.py
dam/logging/: __init__.py  console.py  cycle_record.py  loopback_writer.py  mcap_capture.py
dam/registry/: __init__.py  callback.py  guard.py
dam/runner/: __init__.py  base.py  lerobot.py  ros2.py
dam/runtime/: __init__.py  execution_engine.py  factory.py  guard_runtime.py
dam/services/: __init__.py  api.py  boundary_config.py  mcap_sessions.py  ood_trainer.py  risk_log.py  runtime_control.py  service_container.py  telemetry.py
dam/testing/: __init__.py  dataset_source.py  helpers.py  mocks.py  pipeline.py  safety.py  sim_adapters.py  test_loopback_writer.py
dam/types/: __init__.py  action.py  enforcement.py  observation.py  result.py  risk.py
diagrams/: diagram1_system_architecture.drawio
docker/: Dockerfile  compose.test.yml
docs/: DAM_Development_Plan.md  DAM_LLM_System_Prompt.md  DAM_Specification.md  DAM_Specification_zh.md  boundary-callbacks.md  console.md  contributing.md  experiments.md  guards-reference.md  index.md  installation.md  loopback-logging.md  quick-stack.md  services-api.md
docs/assets/: extra.css
docs/concepts/: architecture.md  boundaries.md  guards-explained.md  safety.md
docs/getting-started/: quickstart.md
docs/learn/: glossary.md  tutorial.md
examples/stackfiles/: demo.yaml  test.yaml
examples/videos/: demo.mov
experiments/: index.html
getting-started/quickstart/: index.html
guards-reference/: index.html
installation/: index.html
learn/glossary/: index.html
learn/tutorial/: index.html
loopback-logging/: index.html
quick-stack/: index.html
scratch/: check_torch.py  debug_pydantic.py  test_colors.py
scripts/: dam-compose.sh  dam_host.py  dam_sim.py  dev_server_lerobot.py  run.sh  run_boundary_scan.py  run_latency_bench.py  run_prod.sh  setup.sh  test.sh
search/: search_index.json
services-api/: index.html
site/: 404.html  DAM_入門學習指南.docx  index.html  sitemap.xml
site/DAM_Development_Plan/: index.html
site/DAM_LLM_System_Prompt/: index.html
site/DAM_Paper/: index.html
site/DAM_Specification/: index.html
site/DAM_Specification_zh/: index.html
site/boundary-callbacks/: index.html
site/console/: index.html
site/contributing/: index.html
site/diagrams/: DeviceNexus.drawio  diagram2_boundary_guard_detail.drawio  diagram3_runtime_workflow.drawio
site/guards-reference/: index.html
site/installation/: index.html
site/quick-stack/: index.html
site/search/: search_index.json
site/services-api/: index.html
tests/: bench_loopback_writer.py  bench_serializer_bus.py  conftest.py
tests/integration/: test_guard_runtime.py  test_monitor_mode.py  test_phase1_exit.py  test_phase2_pipeline.py  test_phase3_pipeline.py
tests/property/: test_boundary_properties.py
tests/safety/: test_execution_regression.py  test_hardware_regression.py  test_kinematic_regression.py  test_ood_regression.py
tests/unit/: test_action_bus.py  test_boundary.py  test_builtin_callbacks.py  test_bus_rust.py  test_callback_registry.py  test_config.py  test_dev_server.py  test_execution_guard.py  test_fallback.py  test_guards.py  test_hardware_guard.py  test_hot_reload.py  test_injection.py  test_lerobot_adapters.py  test_lerobot_builder.py  test_lerobot_presets.py  test_lerobot_runner.py  test_mcap_capture.py  test_ood_guard.py  test_ood_memory_bank.py  test_ood_normalizing_flow.py  test_ood_trainer.py  test_ros2_adapters.py  test_runtime_injection.py  test_services.py  test_stage_dag.py  test_types.py
(+57 files in other folders)
