[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dam"]

[project]
name = "dam"
version = "0.3.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "scipy>=1.12",
    "opencv-python>=4.9",
    "pyserial>=3.5",
    "msgpack>=1.0",
]

[project.optional-dependencies]
# ── Development tools ─────────────────────────────────────────────────────
dev = [
    "ruff>=0.4",
    "mypy>=1.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
    "maturin>=1.0,<2.0",
    "pre-commit>=3.6",
]

# ── Optional adapters (install only what you need) ─────────────────────────
# Policy inference + MCAP logging
torch = [
    "torch>=2.0",
    "mcap>=1.1",
    "msgpack>=1.0",
]

# SO-ARM101 / Koch hardware via lerobot
# lerobot[feetech] includes the Feetech servo driver required by SO-ARM101.
# pin provides pinocchio Python bindings used by LeRobotSourceAdapter for FK.
lerobot = [
    "lerobot[feetech]",
    "pin>=2.6",
]

# ROS2 — rclpy is NOT on PyPI; it is installed by the ROS2 distro setup script.
# Install ROS2 Humble/Iron first, then `source /opt/ros/<distro>/setup.bash`.
# This extras group is intentionally empty; listing it here documents the intent
# and allows `pip install dam[ros2]` to succeed without error in non-ROS envs.
# Additional pure-Python ROS2 utilities that ARE on PyPI:
ros2 = [
    "transforms3d>=0.4",   # quaternion / rotation math used by ROS2 adapter
]

# REST API + WebSocket console
services = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",   # async test client for FastAPI
    "datasets>=2.16", # HuggingFace datasets for OOD
    "msgspec>=0.18.6", # high-performance JSON serialization
]

# Everything (CI matrix / dev-full service)
full = [
    "dam[dev,torch,lerobot,services]",
]

[tool.ruff]
target-version = 'py312'
line-length = 100

[tool.ruff.lint]
select = ['E', 'F', 'I', 'UP', 'B', 'SIM']
ignore = ['B027', 'B023', 'B904', 'E402', 'E501', 'F401', 'SIM115']

[tool.mypy]
strict = true
python_version = "3.12"
plugins = ["pydantic.mypy"]

# Third-party libraries without type stubs on PyPI.
# numpy/torch/fastapi have inline types but mypy still complains without
# explicit overrides; cv2, pinocchio, lerobot etc. publish no stubs at all.
[[tool.mypy.overrides]]
module = [
    "fastapi",
    "fastapi.*",
    "numpy",
    "numpy.*",
    "uvicorn",
    "uvicorn.*",
    "rclpy",       # ROS 2 — installed by the distro, not on PyPI
    "rclpy.*",
    "torch",
    "torch.*",
    "cv2",
    "cv2.*",
    "dam_rs",      # Rust extension built locally via maturin
    "mcap",
    "mcap.*",
    "msgpack",
    "msgspec",
    "msgspec.*",
    "pinocchio",
    "lerobot",
    "lerobot.*",
    "datasets",
    "yaml",
]
ignore_missing_imports = true

# Test code uses pytest fixtures, MagicMock, and dynamic helpers whose types
# are hard to annotate precisely.  We still get import and logic errors checked;
# only missing-annotation noise is suppressed.
[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_untyped_calls = false
ignore_errors = true

# Modules that mix torch/numpy/third-party types heavily and haven't been
# annotated yet.  TODO: remove entries one by one as annotations are added.
[[tool.mypy.overrides]]
module = [
    "dam.services.routers.mcap",
    "dam.services.routers.boundaries",
    "dam.services.routers.risk_log",
    "dam.services.routers.ood",
    "dam.services.routers.telemetry",
    "dam.services.routers.system",
    "dam.services.routers.control",
    "dam.bus",
    "dam.services.risk_log",
    "dam.services.mcap_sessions",
    "dam.services.runtime_control",
    "dam.services.telemetry",
    "dam.guard.builtin.motion",
    "dam.guard.builtin.execution",
    "dam.guard.builtin.hardware",
    "dam.guard.builtin.ood",
    "dam.registry.guard",
    "dam.decorators",
    "dam.boundary.builtin_callbacks",
    "dam.logging.loopback_writer",
    "dam.runner.lerobot",
    "dam.adapter.opencv.source",
    "dam.adapter.lerobot.sink",
    "dam.adapter.lerobot.policy",
    "dam.adapter.lerobot.source",
    "dam.adapter.lerobot.adapter",
    "dam.adapter.lerobot.builder",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "hardware: requires real hardware (deselect with '-m not hardware')",
    "slow: slow tests",
    "property: property-based tests using Hypothesis",
    "ros2: requires rclpy / ROS2 installation",
]
