[workspace]
members = [
    "crates/watchdog",
    "crates/observation-bus",
    "crates/risk-controller",
    "crates/metric-bus",
    "crates/action-bus",
    "crates/loopback",
    "crates/decision-aggregator",
    "dam-py",
]
resolver = "2"

[workspace.dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
crossbeam = "0.8"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
